 ** Add repository link to index page.

 ** In the individual options, as returned by `get_html_options' and
    used in html generation, replacement strings ("%...") are not
    considered anymore. Instead, options can be anonymouns functions
    which use their arguments to configure the output string. So if
    users manually changed options with replacements, they have to do
    it differently now; looking into the `get_html_optins.m' file will
    help to figure out the correct way.

 ** Add Octave Forge stylesheet, icons, and javascript files.

 ** Page margins of Octave Forge additional package documentation are
    now configurable with the Octave Forge stylesheet.

Summary of important user-visible changes for generate_html 0.2.0:
-------------------------------------------------------------------

 ** New function `check_duplicates' checks for duplicate symbols by
    querying a server at Octave Forge.

 ** New function `urlview' asynchroneously starts a browser for an
    url, supports sending parameters with POST and GET methods.

 ** Vectorize generation of alphabetic function database.

 ** Make alphabetic databases for class methods and namespaced
    functions, too.

Summary of important user-visible changes for generate_html 0.1.13:
-------------------------------------------------------------------

 ** Changes to the package index page

    o generate_package_html: Make icons clickable.

 ** Change URLs

    o get_html_options: Use the new https URLs for the octave-forge
      (default) style.

 ** Bug fixes

    o html_help_text, generate_package_html: Handle undocumented
      functions.

    o generate_html_manual (get_txi_files): Ignore
      version-octave.texi, which was previously named version.texi.

 ** Improve release Makefile

    o Makefile: Make release tarballs reproducible


Summary of important user-visible changes for generate_html 0.1.12:
-------------------------------------------------------------------
